# lab

./: .gitmodules  README.md
cloudflare/cloudflare-ai/: package-lock.json  package.json  readme_timmy.txt  wrangler.toml
cloudflare/cloudflare-ai/src/: index.ts
cloudflare/kamedatest/: package-lock.json  readme_timmy.txt  wrangler.toml
cloudflare/kamedatest/src/: index.js
cloudflare/momentotest/: package-lock.json  package.json  readme_timmy.txt
cloudflare/momentotest/src/: test.js
cloudflare/tidb-cloud-cloudflare/: package-lock.json  package.json  readme_timmy.txt  wrangler.toml
cloudflare/tidb-cloud-cloudflare/src/: index.ts
kubernetes/kubecraft-fundamentals/: nginx.yaml
nodejs/nodejs_playground/: callbacks.js  package.json
python/python_test_py12/: pyproject.toml
python/temppython/: hello.ipynb  pyproject.toml  test.py
rust/guessing_game/src/: main.rs
rust/thermometer_cf/: Cargo.toml
rust/thermometer_cf/src/: main.rs
terraform/terraform_gettingstarted/: terraform.tfstate  terraform.tfstate.backup
