[tool.poetry]
name = "temppython"
version = "0.1.0"
description = ""
authors = ["pop timmytandian <mail@timmytandian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
ipython = "^8.16.1"
ipykernel = "^6.25.2"
ipympl = "^0.9.3"
scipy = "^1.11.3"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
